cmake_minimum_required (VERSION 3.15.0)
project("learning")
add_executable(${PROJECT_NAME} testinwindows.cpp)
add_executable("l41" l41.cpp)
add_executable("auto" auto.cpp)
add_executable("l44" listing44.cpp)
add_executable("l47" l47.cpp)
add_executable("ex41" exercise41.cpp)
add_executable("calc" calculator.cpp)
add_executable("l53" l53.cpp)
add_executable("l55" l55.cpp)
